# navigator

./: .dockerignore  .env.example  .gitignore  .mergify.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  codecov.yml  deny.toml  navigator.example.yaml
archives/: Cargo.toml  README.md
archives/src/: drift.rs  email.rs  email_config.rs  generic.rs  iceberg.rs  lib.rs  parquet_io.rs  runner.rs  snapshot.rs  tables.rs  workflow.rs
billing/: Cargo.toml  README.md
billing-workflows/: Cargo.toml  README.md
billing-workflows/src/: canary.rs  digest.rs  lib.rs  matter_close.rs  reconcile.rs  recurring.rs
billing/src/: gcp_cost.rs  lib.rs  xero_auth.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: assets.rs  credentials.rs  docs.rs  drive.rs  erd.rs  events.rs  format.rs  forms_sync.rs  git.rs  glossary.rs  i18n_audit.rs  import.rs  intake.rs  list.rs  live_transcription.rs  login.rs  lsp_publish.rs  main.rs  palette.rs  project.rs  remote.rs  scaffold.rs
cli/tests/: docs.rs  erd_svg.rs  format.rs  glossary.rs  help.rs  import.rs  jurisdiction_reconciliation.rs  list.rs  live_transcription_fake.rs  live_transcription_google_e2e.rs  llc_formation_e2e.rs  naturalization_e2e.rs  opa_policy.rs  planning_in_github_issues.rs  project.rs  question_type_registry_parity.rs  render.rs  transcribe_fake.rs  transcribe_google_e2e.rs  validate.rs  validate_i18n.rs  version.rs  workshop_command_grounding.rs  workshop_llc_grounding.rs
cloud/: Cargo.toml  README.md
cloud/src/: audio.rs  fs.rs  gcs.rs  lib.rs  redirect.rs  speech.rs  test_support.rs
compass/: Cargo.toml  README.md
compass/src/: main.rs
compass/tests/: validate.rs
features/: Cargo.toml  README.md
features/src/: journey.rs  lib.rs  template_shapes.rs  webdriver.rs
features/tests/: acroform_fill.rs  aida_welcome_chain.rs  annual_report_filing.rs  brand_routing.rs  bulk_import_engagement.rs  client_intake.rs  closing_letter.rs  compliance_filings_workflow_shapes.rs  deploy_the_navigator_walkthrough.rs  entity_formation.rs  esignature_webhook.rs  estate_intake.rs  git_repo_collaboration.rs  inbound_email_round_trip.rs  intake_language.rs  legal_workflow_shapes.rs  mcp_create_notation.rs  mutable_intake_docusign.rs  naturalization_federal.rs  nautilus_debt_shield.rs  nautilus_workflows.rs  nest_formation.rs  nexus_fractional_gc.rs  nonprofit_workflow_shapes.rs  northstar_estate.rs  oidc_callback.rs  onboarding_welcome.rs  portal_admin_firm_surface.rs  portal_invoice_card.rs  portal_landing.rs  portal_projects_detail.rs  portal_projects_writes.rs  retainer_intake.rs  spanish_client_journey.rs  template_validate.rs  trust_esignature.rs  workshop_navigator_walkthrough.rs
forms/: Cargo.toml  README.md
forms/src/: fieldmap.rs  lib.rs  reauthor.rs
forms/tests/: fill_real_packets.rs  fill_round_trip.rs  question_code_contract.rs  template_bindings.rs  vendored_forms.rs
import/: Cargo.toml  README.md
import/src/: apply.rs  contract.rs  lib.rs  validate.rs
import/tests/: apply.rs  validate.rs
live-inquiry/: Cargo.toml
live-inquiry/src/: lib.rs
lsp/: Cargo.toml  README.md
lsp/src/: diagnostics.rs  lib.rs  main.rs  position.rs  state.rs
lsp/tests/: jsonrpc.rs
lsp/vscode-ext/: .vscodeignore  README.md  package.json
lsp/zed-ext/: Cargo.toml  extension.toml
mcp/: Cargo.toml  README.md
mcp/src/: lib.rs  principal.rs  protocol.rs  server.rs
pdf/: Cargo.toml  README.md
pdf/src/: acroform.rs  certificate.rs  format.rs  lib.rs  markdown.rs
repos/: Cargo.toml  README.md
repos/src/: lib.rs
rules/: Cargo.toml  README.md
rules/src/: c001.rs  c002.rs  c003.rs  c004.rs  e001.rs  e002.rs  e003.rs  engine.rs  f103.rs  f104.rs  f105.rs  f106.rs  f107.rs  f108.rs  f109.rs  f110.rs  f112.rs  f113.rs  f114.rs  f115.rs  f116.rs  f117.rs  f118.rs  frontmatter.rs  lib.rs  links.rs  m001.rs  m003.rs  m004.rs  m005.rs  m007.rs  m009.rs  m010.rs  m011.rs  m012.rs  m018.rs  m019.rs  m020.rs  m021.rs  m022.rs  (+37 more)
statutes/: Cargo.toml  README.md
statutes/src/: email.rs  fetch.rs  lib.rs  parse.rs  sync.rs  workflow.rs
store/: Cargo.toml  README.md
store/seeds/: Address.yaml  Answer.yaml  Credential.yaml  Entity.yaml  EntityBillingProfile.yaml  EntityType.yaml  GitRepository.yaml  Invoice.yaml  InvoiceLineItem.yaml  Jurisdiction.yaml  Letter.yaml  Mailroom.yaml  Person.yaml  PersonEntityRole.yaml  PersonProjectRole.yaml  Product.yaml  Project.yaml  Question.yaml  QuestionTranslation.yaml  Testimonial.yaml  User.yaml
store/src/: attestations.rs  blobs.rs  communications.rs  config.rs  conflicts.rs  contract_reviews.rs  coupons.rs  db.rs  db_error.rs  document_comments.rs  documents.rs  email_conversations.rs  email_tokens.rs  events.rs  expunge_records.rs  expunge_requests.rs  filings.rs  git_access_tokens.rs  lib.rs  notarizations.rs  notation_clauses.rs  notations.rs  persons.rs  playbooks.rs  products.rs  projects.rs  question_registry.rs  review_documents.rs  seed.rs  signatures.rs  statutes.rs  subscriptions.rs  templates.rs  test_support.rs  testimonials.rs  xero_invoices.rs
store/tests/: contract_reviews.rs  estate_suite_coverage.rs  git_repo_schema.rs  timestamp_convention.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
views/: Cargo.toml  README.md
views/content/: privacy.md  terms.md
views/locales/: en.yml  es.yml
views/src/: assets.rs  brand.rs  components.rs  i18n.rs  layout.rs  lib.rs  lsp.rs  markdown.rs  notation.rs  slug.rs
views/tests/: accessibility.rs
web/: Cargo.toml  README.md
web/examples/: docusign_capture.rs
web/public/: VENDOR.toml
web/src/: a2a.rs  access.rs  admin.rs  admin_contract_reviews.rs  admin_csv.rs  admin_playbooks.rs  agent_router.rs  api.rs  archives.rs  auth.rs  billing_admin.rs  blog.rs  canonical_host.rs  clauses.rs  cli_auth.rs  config.rs  content_loader.rs  contract_review.rs  contract_review_walk.rs  conversation.rs  csrf.rs  documents.rs  docusign_auth.rs  email.rs  email_confirm.rs  email_events.rs  (+46 more)
workflows/: Cargo.toml  README.md
workflows-service/: Cargo.toml  README.md
(+817 files in other folders)
