[package]
name = "cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
google-cloud-auth.workspace = true
google-cloud-storage.workspace = true
google-cloud-token.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
telemetry.workspace = true
tracing.workspace = true
walkdir.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
wiremock.workspace = true

[[bin]]
name = "redirect"
path = "src/bin/redirect.rs"

[lints]
workspace = true
