[package]
name = "compass"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "compass"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rules.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
