[package]
name = "import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
sea-orm.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
store.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
store = { workspace = true, features = ["test-support"] }
tokio.workspace = true

[lints]
workspace = true
