[package]
name = "live-inquiry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rules.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
