[package]
name = "lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "navigator-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
lsp-types = "0.97"
anyhow = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
