[package]
name = "pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
lopdf.workspace = true
pulldown-cmark = { workspace = true, default-features = false }
thiserror.workspace = true
typst = "0.15"
typst-layout = "0.15"
typst-pdf = "0.15"
typst-kit = { version = "0.15", features = ["embedded-fonts", "scan-fonts"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
