[package]
name = "rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true }
serde_yaml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
workflows.workspace = true

[lints]
workspace = true
