[package]
name = "workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
cloud.workspace = true
pdf.workspace = true
# We talk to the Restate broker over plain HTTP — admin API at
# :9070 and ingress at :8080 — so reqwest is the only dependency
# needed for the `RestateRuntime` client adapter. There is *no*
# Restate Rust SDK in the dependency graph today.
#
# If/when we want to author durable services in Rust (i.e. let
# Restate drive Rust handlers as opposed to just submitting jobs
# to it from outside), add `restate-sdk` here. The crate is
# maintained by Restate at <https://github.com/restatedev/sdk-rust>
# and would slot in alongside reqwest. Pin to whatever line is
# current at the time:
#
#   restate-sdk = "0.x"
#
# Then re-export a `restate-service` binary target from this crate
# (or a new `workflows-services` crate) and register it against
# `RESTATE_ADMIN_URL` at boot.
pulldown-cmark.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
store.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
store = { workspace = true, features = ["test-support"] }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock.workspace = true
# Trace-propagation test: a real tracer + the W3C propagator so the trigger's
# injected span context produces a well-formed `traceparent` on the wire.
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
